# llm-preserver

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  WORKFLOW.md  pyproject.toml
.claude/: settings.json
.claude/agents/: planner.md  reviewer-adversarial.md  reviewer.md  security-reviewer.md  test-first.md
.claude/commands/: adr.md  analyze.md  clarify.md  plan.md  product-spec.md  review-adversarial.md  review-check.md  review.md  scope-check.md  security.md  spec.md  specs-status.md  test-first.md
.claude/hooks/: block-destructive.sh  branch-check.sh  specs-status.sh  statusline.sh  strip-ai-attribution.sh
.claude/rules/: agent-legible-code.md  commit-style.md  git-workflow.md  public-repo-hygiene.md  python-code.md
.github/: dependabot.yml  pull_request_template.md
docs/: agent-handoff.md  cli.md  data-structures.md  project-types.md  workflow-diagram.md
tests/: conftest.py  test_archive.py  test_cli.py  test_cli_discover.py  test_cli_discover_flow.py  test_cli_discover_guards.py  test_cli_discover_mode.py  test_cli_env.py  test_cli_pull.py  test_cli_pull_advisory.py  test_cli_pull_errors.py  test_cli_pull_plan.py  test_cli_pull_plan_guards.py  test_cli_pull_prompts.py  test_cli_pull_size_confirm.py  test_cli_remove.py  test_cli_remove_guards.py  test_cli_verify.py  test_cli_verify_edges.py  test_cli_verify_footer.py  test_cli_verify_manifest.py  test_cli_verify_staging.py  test_discover_guards.py  test_discover_nav.py  test_discover_render.py  test_hf_logging.py  test_hub.py  test_hub_discovery.py  test_hub_discovery_client.py  test_pull.py  test_pull_advisory.py  test_pull_advisory_archive.py  test_pull_advisory_remedies.py  test_pull_all.py  test_pull_all_edge.py  test_pull_all_guards.py  test_pull_base_resolution.py  test_pull_docs.py  test_pull_grouping.py  test_pull_guards.py  (+19 more)
(+69 files in other folders)
